--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -5,7 +5,24 @@
     <title>List of Pet Owners</title>
 </head>
 <body>
-<h1 th:text="'List of pet owners'">List of pet owners...</h1>
-
+<!--/*@thymesVar id="owners" type="java.util.Set<Owner>"*/-->
+<!--/*@thymesVar id="owner" type="guru.springframework.sfgpetclinic.model.Person"*/-->
+    <h1 th:text="'List of pet owners'">List of pet owners...</h1>
+    <table>
+        <thead>
+            <tr>
+                <td>Id</td>
+                <td>First Name</td>
+                <td>Last Name</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="owner : ${owners}">
+                <td th:text="${owner?.id}">1</td>
+                <td th:text="${owner?.firstName}">Joe</td>
+                <td th:text="${owner?.lastName}">Buck</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
